<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>info.multani.cassandra</groupId>
  <artifactId>cassandra-external-file-seed-provider</artifactId>

  <!-- The version is overriden by the git tag during the CI releasse pipeline. -->
  <version>0.0.1-SNAPSHOT</version>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub multani Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/multani/cassandra-external-file-seed-provider</url>
    </repository>
  </distributionManagement>

  <properties>
    <cassandra-version>4.1.10</cassandra-version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>
    <maven.compiler.testRelease>11</maven.compiler.testRelease>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.cassandra</groupId>
      <artifactId>cassandra-all</artifactId>
      <version>${cassandra-version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>6.0.0</version>
      <scope>test</scope>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-tcnative-boringssl-static</artifactId>
      <version>2.0.74.Final</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine>
            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens java.base/java.io=ALL-UNNAMED
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
